--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+### Insolen Engine ###
+ThirdParty/
 
 # Created by https://www.gitignore.io/api/c++,visualstudio
 # Edit at https://www.gitignore.io/?templates=c++,visualstudio
