--- a/OpenGL-Learning/OpenGL-Learning.vcxproj.filters
+++ b/OpenGL-Learning/OpenGL-Learning.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\ThirdParty\glad\gl_4_6_core\src\glad.c">
       <Filter>ThirdParty</Filter>
     </ClCompile>
+    <ClCompile Include="first_example.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
