--- a/OpenGL-Learning/OpenGL-Learning.vcxproj.filters
+++ b/OpenGL-Learning/OpenGL-Learning.vcxproj.filters
@@ -36,12 +36,18 @@
     <ClCompile Include="Application.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Triada.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
       <Filter>stdafx</Filter>
     </ClInclude>
     <ClInclude Include="Application.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Triada.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
