--- a/OpenGL-Learning/OpenGL-Learning.vcxproj
+++ b/OpenGL-Learning/OpenGL-Learning.vcxproj
@@ -167,6 +167,9 @@
       <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </DisableSpecificWarnings>
     </ClCompile>
+    <ClCompile Include="OpenGL.cpp" />
+    <ClCompile Include="ScreenSize.cpp" />
+    <ClCompile Include="Size.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -176,13 +179,18 @@
       </ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Triada.cpp" />
+    <ClCompile Include="Version.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="OpenGL.h" />
+    <ClInclude Include="ScreenSize.h" />
+    <ClInclude Include="Size.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Triada.h" />
+    <ClInclude Include="Version.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
