--- a/OpenGL-Learning/OpenGL-Learning.vcxproj
+++ b/OpenGL-Learning/OpenGL-Learning.vcxproj
@@ -154,6 +154,7 @@
       </DisableSpecificWarnings>
     </ClCompile>
     <ClCompile Include="Chatter.cpp" />
+    <ClCompile Include="glfw_window_example.cpp" />
     <ClCompile Include="Main.cpp">
       <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
       </DisableSpecificWarnings>
