--- a/OpenGL-Learning/OpenGL-Learning.vcxproj
+++ b/OpenGL-Learning/OpenGL-Learning.vcxproj
@@ -165,6 +165,7 @@
       <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </DisableSpecificWarnings>
     </ClCompile>
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -181,6 +182,7 @@
   <ItemGroup>
     <ClInclude Include="Chatter.h" />
     <ClInclude Include="IRendering.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
