--- a/OpenGL-Learning/OpenGL-Learning.vcxproj.filters
+++ b/OpenGL-Learning/OpenGL-Learning.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="JustUtility.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Window.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -82,6 +85,9 @@
     </ClInclude>
     <ClInclude Include="..\ThirdParty\stb\stb_image.h">
       <Filter>ThirdParty</Filter>
+    </ClInclude>
+    <ClInclude Include="Window.h">
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
