--- a/OpenGL-Example/OpenGL-Example.vcxproj
+++ b/OpenGL-Example/OpenGL-Example.vcxproj
@@ -21,8 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{2DB13C2E-8AE6-4878-BD47-DF085A8F0C8B}</ProjectGuid>
-    <RootNamespace>OpenGLLearning</RootNamespace>
+    <RootNamespace>OpenGLExample</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>OpenGL-Example</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
