updated config for teh Renderer class

--- a/OpenGL-Example/OpenGL-Example.vcxproj
+++ b/OpenGL-Example/OpenGL-Example.vcxproj
@@ -168,6 +168,7 @@
       </DisableSpecificWarnings>
     </ClCompile>
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -190,6 +191,7 @@
     <ClInclude Include="IRendering.h" />
     <ClInclude Include="JustUtility.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Texture.h" />
