--- a/OpenGL-Example/OpenGL-Example.vcxproj
+++ b/OpenGL-Example/OpenGL-Example.vcxproj
@@ -154,6 +154,7 @@
       <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </DisableSpecificWarnings>
     </ClCompile>
+    <ClCompile Include="Application.cpp" />
     <ClCompile Include="Chatter.cpp" />
     <ClCompile Include="glfw_window_example.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -187,6 +188,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ThirdParty\stb\stb_image.h" />
+    <ClInclude Include="Application.h" />
     <ClInclude Include="Chatter.h" />
     <ClInclude Include="IRendering.h" />
     <ClInclude Include="JustUtility.h" />
